# telegram-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cfg.go  cfg.py  config.go  db.py  go.mod  go.sum  kafka.go  kafka.py  main.go  main.py  mysql.go  mysql.py  pg.go  pg.py  pyproject.toml  readme.md  requirements-poetry.txt  taskfile.dist.yaml  taskfile.yaml  telegram.go  type.go  web.go
.github/: mergify.yml  renovate.json
.github/workflows/: ci.yaml  lint.yaml  release-docker.yaml  release.yaml  review.yaml
lib/: __init__.py  _config.py  config.py  debezium.py
