[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Trim21 <trim21.me@gmail.com>"]
readme = "readme.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = { extras = ["socks", ], version = "21.0.1" }
loguru = "0.7.2"
pydantic = "2.6.4"
redis = { extras = ["hiredis"], version = "5.0.3" }
yarl = "1.9.4"
msgspec = "0.18.6"
uvicorn = "0.27.0.post1"
starlette = "0.37.2"
aiokafka = "0.10.0"
aiorwlock = "1.4.0"
asyncmy = "0.2.9"
asyncpg = "0.29.0"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
watchfiles = "0.21.0"
pre-commit = "3.6.0"

[tool.black]
target_version = ['py310']

extend-exclude = "api/v1"

[tool.ruff]
extend-exclude = [".venv", "api"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "BLE",
    #  "DJ",
    "EXE",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    #  "DTZ",
    #  "PTH",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TID",
    "TRY",
    "YTT",
]
ignore = [
    'N806',
    'N802',
    'N803',
    'E501',
    'BLE001',
    'RUF002',
    'S301',
    'S314',
    'S101',
    'N815',
    'S104',
    'C901',
    'ISC003',
    'PLR0913',
    'RUF001',
    'SIM108',
    'RUF003',
    'RET504',
    'TRY300',
    'TRY003',
    'TRY201',
    'TRY301',
    'PLR0912',
    'PLR0915',
    'PLR2004',
    'PGH003',
]

unfixable = ['F401', 'F841']
