[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Trim21 <trim21.me@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = { extras = ["socks"], version = "21.7" }
redis = { extras = ["hiredis"], version = "5.2.0" }
yarl = "1.18.0"
msgspec = "0.18.6"
uvicorn = "0.32.1"
starlette = "0.41.3"
aiorwlock = "1.5.0"
asyncmy = "0.2.9"
asyncpg = "0.30.0"
confluent-kafka = "2.6.1"
sslog = "0.0.0a51"
async-lru = "2.0.4"

[tool.poetry.group.dev.dependencies]
watchfiles = "1.0.0"
pre-commit = "4.0.1"
confluent-kafka-stubs = { git = 'https://gitlab.com/Trim21/confluent-kafka-stubs.git', rev = '9484f4aad44eab371fe952b278ab2715f3a8c780' }
asyncpg-stubs = "0.30.0"

[tool.black]
target_version = ['py310']

extend-exclude = "api/v1"

[tool.ruff]
extend-exclude = [".venv", "api"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "BLE",
    #  "DJ",
    "EXE",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    #  "DTZ",
    #  "PTH",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TID",
    "TRY",
    "YTT",
]
ignore = [
    'N806',
    'N802',
    'N803',
    'E501',
    'BLE001',
    'RUF002',
    'S301',
    'S314',
    'S101',
    'N815',
    'S104',
    'C901',
    'ISC003',
    'PLR0911',
    'PLR0913',
    'RUF001',
    'SIM108',
    'RUF003',
    'RET504',
    'TRY300',
    'INP001',
    'TRY003',
    'TRY201',
    'TRY301',
    'PLR0912',
    'PLR0915',
    'PLR2004',
    'PGH003',
]

unfixable = ['F401', 'F841']

[tool.mypy]
strict = true
warn_no_return = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
ignore_missing_imports = true
