[build-system]
requires = ["flit-core==3.11.0"]
build-backend = "flit_core.buildapi"

[project]
name = 'project'
version = "0"
requires-python = "~=3.10.16"
dependencies = [
    'aiorwlock (==1.5.0)',
    'async-lru (==2.0.4)',
    'asyncmy (==0.2.10)',
    'asyncpg (==0.30.0)',
    'confluent-kafka (==2.9.0)',
    'msgspec (==0.19.0)',
    'python-telegram-bot[socks] (==21.11.1)',
    'redis[hiredis] (==5.2.1)',
    'sslog (==0.0.0a52)',
    'starlette (==0.46.0)',
    'uvicorn (==0.34.0)',
    'yarl (==1.18.3)',
]

[dependency-groups]
dev = [
    'asyncpg-stubs (==0.30.0)',
    'types-confluent-kafka == 1.3.1',
    'mypy==1.15.0'
]

[tool.uv]
package = false

[tool.ruff]
extend-exclude = [".venv", "api"]

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "BLE",
    #  "DJ",
    "EXE",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    #  "DTZ",
    #  "PTH",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TID",
    "TRY",
    "YTT",
]
ignore = [
    'N806',
    'N802',
    'N803',
    'E501',
    'BLE001',
    'RUF002',
    'S301',
    'S314',
    'S101',
    'N815',
    'S104',
    'C901',
    'ISC003',
    'PLR0911',
    'PLR0913',
    'RUF001',
    'SIM108',
    'RUF003',
    'RET504',
    'TRY300',
    'INP001',
    'TRY003',
    'TRY201',
    'TRY301',
    'PLR0912',
    'PLR0915',
    'PLR2004',
    'PGH003',
]
unfixable = ['F401', 'F841']

[tool.mypy]
strict = true
warn_no_return = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
ignore_missing_imports = true
